resources/vpc/ec2.tf
resource "aws_instance" "web" {     # terraform reference name
  ami           = "ami-0b4f379183e5706b9" 
  instance_type = "t2.micro"
  tags = {
    Name = "Terraform" # instance name
  }
}
